Reverted test (not caused by this PR).